# ChangeLog for net-im/vacuum-otre2e
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Oct 2010; Nikoli <nikoli@lavabit.com> +vacuum-otre2e-9999.ebuild,
  +metadata.xml:
  initial ebuild
